# judge

./: Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
src/judge/: __init__.py
src/judge.egg-info/: PKG-INFO  SOURCES.txt
src/sigma/: io.py
src/sigma/cli/: main.py
src/sigma/core/: models.py
tests/: test_basic.py
